# cuda-data-operators

./: .clangd  .gitignore  README.md  benchmark.py  colab_setup.sh  dataops.py  predicate_sum.cu  pyproject.toml  test_bitcast.cu  test_runner.py
cuda_dataops/: __init__.py  data.py  ops.py
src/: column.cuh  lib.cu  memory_pool.cuh
src/operators/: aggregate.cuh  filter.cuh
src/primitives/: prefix_scan.cuh
